# tetris

./: CMakeLists.txt  README.md  build.bat  clean.bat  comp.bat  shell.bat  start.bat
src/: main.c  tetris.c  tetris.h
tests/: comp.bat  tests.c
